# video_editor

./: CMakeLists.txt  README.md
lib/FFmpeg/: CMakeLists.txt
src/: main.cpp
